[CU-86bbm4xfq] Give e2e test tables a type, and clear the class's inspection warnings
Test tables were four static name strings assigned partway through
setupTestTables(), with the SQL builders reading them implicitly rather than
taking them as parameters. Creating a table and registering its cleanup were
separate steps, so a new table was only dropped if you remembered to say so,
and a call site gave no clue whether it held a qualified name or a bare one.

TestTable.create() is now the only way to make one: it creates the table and
enrols it for dropping in the same breath, and exposes qualifiedName() and
unqualifiedName() so each call site says which it wants. The run's three tables
live in a TestTables record behind one null-checked accessor, which also
settles the @NullMarked complaint about uninitialized statics. The
ThrowingRunnable/afterAllCleanups machinery goes away; dropping tables was all
it ever did.

Table names are now uniformly lowercased. Only the pagination table was before,
even though Trino folds unquoted identifiers anyway, and its qualified and
unqualified spellings disagreed on case as a result.

Also clears the remaining inspections in this class and BaseE2eTest: @Nullable
on the parameters that callers legitimately pass null to, placeholders instead
of concatenation in log calls, replace() for a non-regex replacement, dropped
conditions the analyzer can prove constant, and dropped the unused return of
dataConnectQuery() along with the two empty Javadoc tags describing it.
dataConnectUntilException() only ever ran with SC_BAD_REQUEST, so it is now
dataConnectUntilBadRequest() with no status parameter.

No change to the SQL the suite issues, apart from table name case.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>